WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255757
AX: aria-grabbed and aria-dropeffect don't work for display:contents elements
https://bugs.webkit.org/show_bug.cgi?id=255757
Summary
AX: aria-grabbed and aria-dropeffect don't work for display:contents elements
Tyler Wilcock
Reported
2023-04-20 18:45:32 PDT
...
Attachments
Patch
(12.57 KB, patch)
2023-04-20 18:47 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-20 18:45:48 PDT
<
rdar://problem/108349820
>
Tyler Wilcock
Comment 2
2023-04-20 18:47:42 PDT
Created
attachment 466021
[details]
Patch
EWS
Comment 3
2023-04-21 10:17:36 PDT
Committed
263249@main
(3f549dfda794): <
https://commits.webkit.org/263249@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466021
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug