AX: aria-grabbed and aria-dropeffects don't work for display:contents elements https://bugs.webkit.org/show_bug.cgi?id=255757 rdar://problem/108349820

Reviewed by Chris Fleizach.

Fix this by moving the necessary implementations from
AccessibilityRenderObject to AccessibilityNodeObject.

* LayoutTests/accessibility/mac/aria-drag-drop-expected.txt:
* LayoutTests/accessibility/mac/aria-drag-drop.html:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::supportsDropping const):
(WebCore::AccessibilityNodeObject::supportsDragging const):
(WebCore::AccessibilityNodeObject::isGrabbed):
(WebCore::AccessibilityNodeObject::determineDropEffects const):
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::supportsDropping const): Deleted.
(WebCore::AccessibilityRenderObject::supportsDragging const): Deleted.
(WebCore::AccessibilityRenderObject::isGrabbed): Deleted.
(WebCore::AccessibilityRenderObject::determineDropEffects const): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:

Canonical link: https://commits.webkit.org/263249@main